chess-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-frontend
  namespace: apps
  labels:
    app: chess-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chess-frontend
  template:
    metadata:
      labels:
        app: chess-frontend
    spec:
      containers:
        - name: chess-frontend
          image: diderikk/chess-frontend:v1.1.5
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
