chess-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess-frontend-service
  namespace: apps
  labels:
    app: chess-frontend
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: chess-frontend
